fix: Update achievement titles for new level milestones up to 10000

--- a/web_app.html
+++ b/web_app.html
@@ -5911,7 +5911,7 @@
             // Levels (15 achievements)
             // Updated levels list up to 10000 with milestones
             const levelsList = [[5,'🌟'],[10,'⭐'],[15,'✨'],[20,'💫'],[25,'🌟'],[30,'⭐'],[35,'✨'],[40,'💫'],[50,'🌟'],[60,'⭐'],[70,'✨'],[80,'💫'],[90,'🌟'],[100,'💫'],[250,'🌟'],[500,'⭐'],[750,'✨'],[1000,'💫'],[2500,'🌟'],[5000,'⭐'],[7500,'✨'],[10000,'💫']];
-            const levelsTitlesRu = ['Уровень 5','Уровень 10','Уровень 15','Уровень 20','Уровень 25','Уровень 30','Уровень 35','Уровень 40','Уровень 50','Уровень 60','Уровень 70','Уровень 80','Уровень 90','Уровень 95','МАКСИМУМ'];
+            const levelsTitlesRu = ['Уровень 5','Уровень 10','Уровень 15','Уровень 20','Уровень 25','Уровень 30','Уровень 35','Уровень 40','Уровень 50','Уровень 60','Уровень 70','Уровень 80','Уровень 90','Уровень 100','Уровень 250','Уровень 500','Уровень 750','Уровень 1000','Уровень 2500','Уровень 5000','Уровень 7500','МАКСИМУМ 10000'];
             levelsList.forEach(([thresh, icon], idx) => {
                 achievements.push({
                     id:`level_${thresh}`, threshold:thresh, icon:icon,
